objects/BChild__c.object
<CustomObject>
    <fields>
        <fullName>BChild__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BChild</label>
        <referenceTo>BChild__c</referenceTo>
        <relationshipLabel>BChilds</relationshipLabel>
        <relationshipName>BChilds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>Parent__c</referenceTo>
        <relationshipLabel>BChilds</relationshipLabel>
        <relationshipName>BChilds</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>BChild</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>BChild Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BChilds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>